Fixed layout shift of projectslider on smaller screens

--- a/src/components/ProjectSlider/ProjectSlider.module.css
+++ b/src/components/ProjectSlider/ProjectSlider.module.css
@@ -1,10 +1,24 @@
 .container {
     display: grid;
-    grid-template-columns: minmax(0, 11%) minmax(0, 62%) minmax(0, 11%);
+    grid-template-columns: minmax(0, 15%) minmax(0, 65%) minmax(0, 15%);
     grid-template-areas: "prev_btn project_showcase next_btn";
     grid-column-gap: 10px;
 
+    max-width: 100%;
+
     justify-content: center;
+}
+
+@media screen and (width <= 1000px) {
+    .container {
+        grid-template-columns: minmax(0, 11%) minmax(0, 55%) minmax(0, 11%);
+    }
+}
+
+@media screen and (width <= 550px) {
+    .container {
+        grid-template-columns: minmax(0, 11%) minmax(0, 50%) minmax(0, 11%);
+    }
 }
 
 /*
